--- a/index.css
+++ b/index.css
@@ -272,7 +272,7 @@ header .sign:hover{
 		width: 70px;
 		position: relative;
 	}
-	.heading h2{
+	.heading{
 		text-align: center;
 		margin-bottom: 4rem;
 	}
