--- a/index.css
+++ b/index.css
@@ -128,7 +128,7 @@ header .sign:hover{
 /*testimonial starts*/
 
 .test {
-  margin:2rem auto;
+  margin:2rem 5%;
   padding: 20px;
   width: 80%;
   max-width: 1200px;
