--- a/index.css
+++ b/index.css
@@ -128,7 +128,6 @@ header .sign:hover{
 /*testimonial starts*/
 
 .test {
-  margin:2rem auto;
   text-align: center;
 }
 .heading{
@@ -269,11 +268,12 @@ header .sign:hover{
 		width: 70px;
 		position: relative;
 	}
-	.heading{
+	.test{
 		text-align: center;
 		margin-bottom: 4rem;
-                padding:0 5%;
+                padding:0 auto;
 	}
+
 	
 }
 
